--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -1,3 +1,11 @@
 {
-    "appbartitle":"مصحف القرآن الكريم"
+    "ALQuran":"اللهم اغفر للمسلمين والمسلمات الأحياء منهم والاموات 🤲",
+    "appbartitle":"مصحف القرآن الكريم",
+    "setting":"الاعدادات",
+    "Font_Size":"حجم الخط في عرض الآيات :",
+    "Moshaf_Size":"حجم الخط في عرض المصحف:",
+    "Reset":"إعادة الاعدادات",
+    "Save":"حفظ",
+    "Share":"نشر",
+    "Rate":"تقيم"
 }
